--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,7 @@ links_title: 推荐博客
 links:
   阮一峰的个人网站: http://www.ruanyifeng.com/home.html
   陈皓(CoolShell): http://coolshell.cn
+  阿里中间件团队博客: http://jm.taobao.org/
 
 creative_commons: by-nc-sa
 
