--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,7 @@ links:
   陈皓(CoolShell): http://coolshell.cn
   阿里中间件团队博客: http://jm.taobao.org/
   小土刀的博客: http://wdxtub.com/
+  Lucida的博客: http://lucida.me/
 
 creative_commons: by-nc-sa
 
