--- a/_config.yml
+++ b/_config.yml
@@ -99,9 +99,10 @@ links_title: 推荐博客
 links:
   阮一峰的个人网站: http://www.ruanyifeng.com/home.html
   陈皓(CoolShell): http://coolshell.cn
-  阿里中间件团队博客: http://jm.taobao.org/
-  小土刀的博客: http://wdxtub.com/
-  Lucida的博客: http://lucida.me/
+  阿里中间件团队博客: http://jm.taobao.org
+  小土刀的博客: http://wdxtub.com
+  Lucida的博客: http://lucida.me
+  stormzhang的博客: http://stormzhang.com
 
 creative_commons: by-nc-sa
 
