--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "version": "3.2.2"
   },
   "dependencies": {
-    "hexo": "~3.2.2",
+    "hexo": "^3.2.2",
+    "hexo-cli": "^1.0.2",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
