--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ links:
   小土刀的博客: http://wdxtub.com
   Lucida的博客: http://lucida.me
   stormzhang的博客: http://stormzhang.com
+  四火的唠叨: http://www.raychase.net
 
 creative_commons: by-nc-sa
 
