--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,8 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
+plugins:
+- hexo-generator-sitemap
 ## Themes: https://hexo.io/themes/
 theme: next
 #
