--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-search": "^1.0.2",
     "hexo-generator-searchdb": "^1.0.3",
+    "hexo-generator-sitemap": "^1.1.2",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
