--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 plugins:
 - hexo-generator-sitemap
+- hexo-server
 ## Themes: https://hexo.io/themes/
 theme: next
 #
