--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -28,5 +28,8 @@
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.12.0",
     "jshint-stylish": "^2.1.0"
+  },
+  "dependencies": {
+    "hexo-server": "^0.2.0"
   }
 }
