[docs] add jenkinsfiles

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: "小强的博客"
+title: "Dolphin的博客"
 subtitle:
 description:
 author: xiaoqiang jiang
