--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ permalink_defaults:
 
 # Directory
 source_dir: source
-public_dir: ./../jiangxiaoqiang.github.io
+public_dir: ./jiangxiaoqiang.github.io
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
