--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
-    "hexo-cli": "^4.1.0",
+    "hexo": "4.2.0",
+    "hexo-cli": "4.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
